--- a/package.json
+++ b/package.json
@@ -8,23 +8,38 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "verify:supabase": "tsx scripts/verify-supabase-data.ts",
+    "test:form-validation": "tsx scripts/test-form-validation.ts",
+    "test:form-submissions": "tsx scripts/test-form-submissions.ts",
+    "monitor:submissions": "tsx scripts/monitor-form-submissions.ts",
+    "verify:all": "npm run verify:supabase && npm run test:form-validation && npm run test:form-submissions",
+    "mcp:setup": "tsx scripts/setup-mcp.ts",
+    "mcp:start": "cursor mcp start supabase",
+    "mcp:sample-queries": "tsx scripts/mcp-sample-queries.ts",
+    "mcp:setup-procedures": "tsx scripts/setup-stored-procedures.ts",
+    "mcp:runner": "node scripts/run-mcp-server.js",
+    "docs:mcp": "start MCP_DOCUMENTATION.md || open MCP_DOCUMENTATION.md || xdg-open MCP_DOCUMENTATION.md",
+    "docs": "node scripts/docs-helper.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@react-google-maps/api": "^2.20.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
@@ -48,10 +63,12 @@
     "@types/node": "^20.17.16",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "autoprefixer": "^10.4.17",
     "chalk": "^5.4.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
@@ -65,6 +82,8 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "tsx": "^4.7.1",
+    "typescript": "^5.7.3",
+    "uuid": "^9.0.1"
   }
 }
