--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "check:pre-implementation": "node scripts/check-pre-implementation.js",
     "ai:init": "node scripts/init-ai-session.js",
     "ai:verify": "node scripts/verify-rule-compliance.js",
-    "ai:setup-hooks": "cp .git/hooks/pre-commit.rule-check .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit"
+    "ai:setup-hooks": "cp .git/hooks/pre-commit.rule-check .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit",
+    "mcp:update-schema": "tsx scripts/update-mcp-schema.ts",
+    "migrations:run": "tsx scripts/run-migrations.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -41,20 +43,25 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
     "@react-google-maps/api": "^2.20.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/node-fetch": "^2.6.12",
+    "@types/pg": "^8.11.11",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
-    "next": "^15.1.6",
+    "next": "^14.1.0",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "openai": "^4.80.1",
+    "pg": "^8.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
@@ -92,6 +99,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "uuid": "^9.0.1"
