--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "verify:supabase": "tsx scripts/verify-supabase-data.ts",
     "test:form-validation": "tsx scripts/test-form-validation.ts",
     "test:form-submissions": "tsx scripts/test-form-submissions.ts",
@@ -60,7 +61,6 @@
     "next": "^14.1.0",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
-    "openai": "^4.80.1",
     "pg": "^8.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -76,6 +76,9 @@
     "@next/bundle-analyzer": "^14.1.0",
     "@next/eslint-plugin-next": "^15.1.6",
     "@playwright/test": "^1.50.0",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.16",
     "@types/react": "^18.2.48",
@@ -83,6 +86,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.17",
     "chalk": "^5.4.1",
     "date-fns": "^3.6.0",
@@ -92,6 +96,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "^29.7.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.33",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
@@ -102,6 +107,7 @@
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vitest": "^3.2.4"
   }
 }
