--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "ai:verify": "node scripts/verify-rule-compliance.js",
     "ai:setup-hooks": "cp .git/hooks/pre-commit.rule-check .git/hooks/pre-commit && chmod +x .git/hooks/pre-commit",
     "mcp:update-schema": "tsx scripts/update-mcp-schema.ts",
-    "migrations:run": "tsx scripts/run-migrations.ts"
+    "migrations:run": "tsx scripts/run-migrations.ts",
+    "ingest:rss": "ts-node --transpile-only scripts/rss_ingest.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -81,7 +82,9 @@
     "recharts": "^2.15.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "rss-parser": "^3.13.0",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -102,7 +105,6 @@
     "autoprefixer": "^10.4.17",
     "chalk": "^5.4.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.7",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.37.4",
