--- a/package.json
+++ b/package.json
@@ -120,6 +120,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
+    "supabase": "^1.177.8",
+    "node-mocks-http": "^1.11.0",
     "typescript": "^5.7.3",
     "uuid": "^9.0.1",
     "vitest": "^3.2.4"
