--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "cmdk": "^1.0.4",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
-    "next": "^14.1.0",
+    "next": "^14.2.32",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
     "pg": "^8.14.0",
@@ -81,6 +81,7 @@
     "recharts": "^2.15.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
+    "web-vitals": "^5.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
