--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "jest": "^29.7.0",
     "jsdom": "^26.1.0",
+    "node-mocks-http": "^1.17.2",
     "postcss": "^8.4.33",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
